--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "title": "Canvas Hub",
   "name": "canvas-hub",
-  "version": "1.0.6",
+  "version": "1.0.7",
+  "description": "Device Utilities",
   "config": {
-    "full_description": "A hub for all your Canvas needs. Provides over-the-air firmware updates for Canvas devices using bluetooth.",
+    "full_description": "A hub to utilize common features of Canvas-enabled devices including over-the-air firmware updates and file uploads over Bluetooth.",
     "image": "screenshot.png"
   },
   "scripts": {
@@ -12,7 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bennybtl/xbit-lib": "^1.0.13",
+    "@bennybtl/xbit-lib": "^1.0.14",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
